界面命令合并及调优